--- a/Raspberry/Makefile
+++ b/Raspberry/Makefile
@@ -3,7 +3,7 @@ FFAQ="RasPi FAQ - Preguntas Frecuentas.md"
 S5="Tema 5 - Qué es Raspberry.pdf"
 F5="Tema 5 - Qué es Raspberry.md"
 S6="Tema 6 - Características de Raspberry.md"
-F6="Tema 6 - Características de Raspberry.md.pdf"
+F6="Tema 6 - Características de Raspberry.pdf"
 S7="Tema 7 - Instalación de Raspberry.md"
 F7="Tema 7 - Instalación de Raspberry.pdf"
 S8="Tema 8 - Uso de Raspberry.md"
